// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test check monitor config modal render empty table when request return error 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw monitor-item-routine-modal basic-modal-wrapper css-15pdf7m"
          role="dialog"
          style="width: 960px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                监控指标
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace monitor-item-routine-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  监控指标
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  描述
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="2"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test check monitor config modal should close model when click close icon 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw monitor-item-routine-modal basic-modal-wrapper css-15pdf7m"
          role="dialog"
          style="width: 960px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                监控指标
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace monitor-item-routine-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  监控指标
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  描述
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="mysql:server_status:commands"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql:server_status:commands
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql状态值Com_*/mysql status value Com_
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <ul
                      class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination css-dev-only-do-not-override-bj9uhl"
                    >
                      <li
                        class="ant-pagination-total-text"
                      >
                        <span>
                          共 1 条数据
                        </span>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-prev ant-pagination-disabled"
                        title="上一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="left"
                            class="anticon anticon-left"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="left"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                        tabindex="0"
                        title="1"
                      >
                        <a
                          rel="nofollow"
                        >
                          1
                        </a>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-next ant-pagination-disabled"
                        title="下一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-options"
                      >
                        <div
                          aria-label="页码"
                          class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="页码"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-item"
                              title="20 条/页"
                            >
                              20 条/页
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test check monitor config modal should match snapshot when modal state is true  1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw monitor-item-routine-modal basic-modal-wrapper css-15pdf7m"
          role="dialog"
          style="width: 960px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                监控指标
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace monitor-item-routine-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  监控指标
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  描述
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="mysql:server_status:commands"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql:server_status:commands
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql状态值Com_*/mysql status value Com_
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <ul
                      class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination css-dev-only-do-not-override-bj9uhl"
                    >
                      <li
                        class="ant-pagination-total-text"
                      >
                        <span>
                          共 1 条数据
                        </span>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-prev ant-pagination-disabled"
                        title="上一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="left"
                            class="anticon anticon-left"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="left"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                        tabindex="0"
                        title="1"
                      >
                        <a
                          rel="nofollow"
                        >
                          1
                        </a>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-next ant-pagination-disabled"
                        title="下一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-options"
                      >
                        <div
                          aria-label="页码"
                          class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="页码"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-item"
                              title="20 条/页"
                            >
                              20 条/页
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test check monitor config modal should refresh table when change pagination info 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw monitor-item-routine-modal basic-modal-wrapper css-15pdf7m"
          role="dialog"
          style="width: 960px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                监控指标
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace monitor-item-routine-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  监控指标
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  描述
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="mysql:server_status:commands"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql:server_status:commands
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql状态值Com_*/mysql status value Com_
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <ul
                      class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination css-dev-only-do-not-override-bj9uhl"
                    >
                      <li
                        class="ant-pagination-total-text"
                      >
                        <span>
                          共 1 条数据
                        </span>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-prev ant-pagination-disabled"
                        title="上一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="left"
                            class="anticon anticon-left"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="left"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                        tabindex="0"
                        title="1"
                      >
                        <a
                          rel="nofollow"
                        >
                          1
                        </a>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-next ant-pagination-disabled"
                        title="下一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-options"
                      >
                        <div
                          aria-label="页码"
                          class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="页码"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-item"
                              title="20 条/页"
                            >
                              20 条/页
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test check monitor config modal should render normal table 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-txh9fw monitor-item-routine-modal basic-modal-wrapper css-15pdf7m"
          role="dialog"
          style="width: 960px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <span
                  class="custom-icon custom-icon-close css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                监控指标
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-table-wrapper actiontech-table-namespace monitor-item-routine-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-scroll-horizontal"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup />
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  监控指标
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  描述
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-row ant-table-row-level-0"
                                data-row-key="mysql:server_status:commands"
                              >
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql:server_status:commands
                                </td>
                                <td
                                  class="ant-table-cell"
                                >
                                  mysql状态值Com_*/mysql status value Com_
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                    <ul
                      class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination css-dev-only-do-not-override-bj9uhl"
                    >
                      <li
                        class="ant-pagination-total-text"
                      >
                        <span>
                          共 1 条数据
                        </span>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-prev ant-pagination-disabled"
                        title="上一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="left"
                            class="anticon anticon-left"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="left"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                        tabindex="0"
                        title="1"
                      >
                        <a
                          rel="nofollow"
                        >
                          1
                        </a>
                      </li>
                      <li
                        aria-disabled="true"
                        class="ant-pagination-next ant-pagination-disabled"
                        title="下一页"
                      >
                        <button
                          class="ant-pagination-item-link"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <span
                            aria-label="right"
                            class="anticon anticon-right"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="right"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                              />
                            </svg>
                          </span>
                        </button>
                      </li>
                      <li
                        class="ant-pagination-options"
                      >
                        <div
                          aria-label="页码"
                          class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
                        >
                          <div
                            class="ant-select-selector"
                          >
                            <span
                              class="ant-select-selection-search"
                            >
                              <input
                                aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                                aria-autocomplete="list"
                                aria-controls="rc_select_TEST_OR_SSR_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-label="页码"
                                aria-owns="rc_select_TEST_OR_SSR_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="rc_select_TEST_OR_SSR"
                                role="combobox"
                                type="search"
                                value=""
                              />
                            </span>
                            <span
                              class="ant-select-selection-item"
                              title="20 条/页"
                            >
                              20 条/页
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            class="ant-select-arrow"
                            style="user-select: none;"
                            unselectable="on"
                          >
                            <span
                              aria-label="down"
                              class="anticon anticon-down ant-select-suffix"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="down"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
